# CHicago

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  env.sh  makefile
arch/x86/: arch.mk  elf.h  file.c  gop.c  jump.s  main.c  makefile  proj.conf  sia.c
arch/x86/env/: build.sh  config.sh  toolchain.sh
arch/x86/include/: elf.h  loader.h  sia.h
arch/x86/subarch/: vmm32.c  vmm64.c
arch/x86/sys/: string.c
boot/: CMakeLists.txt  config.c  file.c  gop.c  main.c  makefile  menu.c  sia.c  util.c
boot/arch/: mmu.c  vmmamd64.c  vmmx86.c
boot/arch/amd64/: feature.c  jump.c  misc.c  mmu.c
boot/arch/amd64/include/arch/: mmu.h
boot/arch/arm64/: jump.c  misc.c  mmu.c
boot/arch/arm64/include/arch/: mmu.h
boot/arch/x86/: jump.c  misc.c  mmu.c
boot/arch/x86/include/arch/: mmu.h
boot/efi/: acpi.c  file.c  fontdata.c  globals.c  graphics.c  memory.c  print.c
boot/include/: arch.h  chicago.h  config.h  elf.h  loader.h  menu.h  sia.h  util.h
boot/include/efi/: bs.h  ct.h  dp.h  gop.h  lib.h  loaded_image.h  rng.h  rs.h  simple_io.h  st.h  types.h
boot/loaders/: chicago.c
chos/: proj.conf
drivers/: makefile  proj.conf
drivers/test/: main.cxx  proj.conf
env/: binutils.patch  gcc.patch
env/sia-create/: main.cxx  sia.cxx
env/sia-create/include/: sia.hxx
host-tools/: env.fish  env.sh
host-tools/cmake/: CHOSOptions.cmake  amd64Specific.cmake  x86Specific.cmake
host-tools/cmake/Platform/: CHicago.cmake
host-tools/cmake/Toolchain/: amd64.cmake  x86.cmake
toolchain/: binutils.patch  gcc.patch  makefile
toolchain/boot/: build.make  makefile
toolchain/kernel/: build.make
toolchain/kernel/amd64/: crti.S  crtn.S  makefile
toolchain/kernel/arm64/: makefile
toolchain/kernel/x86/: crti.S  crtn.S  makefile
userspace/: makefile  proj.conf
userspace/guimngr/: display.c  img.c  main.c  makefile  renderer.c  server.c  window.c
userspace/guimngr/include/: display.h  img.h  renderer.h  server.h  window.h
userspace/guitest/: main.c  makefile
userspace/host/: makefile
userspace/host/sia-create/: main.cxx  makefile  sia.cxx
userspace/libc/: makefile
userspace/libc/assert/: __assert.c
userspace/libc/include/: assert.h  stdio.h  stdlib.h  string.h
userspace/libc/stdio/: __fopen_parse_mode.c  __vprint.c  clearerr.c  clearerr_unlocked.c  fclose.c  feof.c  feof_unlocked.c  ferror.c  ferror_unlocked.c  fflush.c  fflush_unlocked.c  fgetc.c  fgetc_unlocked.c  fgetpos.c  fgetpos_unlocked.c  fgets.c  fgets_unlocked.c  flockfile.c  fopen.c  fprintf.c  fprintf_unlocked.c  fputc.c  fputc_unlocked.c  fputs.c  fputs_unlocked.c  fread.c  freopen.c  (+36 more)
userspace/libchicago/: makefile
userspace/libgui/: img.c  makefile  server.c
userspace/osmngr/: main.c  makefile
userspace/sesmgr/: main.c  makefile
(+71 files in other folders)
